# qtwidgets

./: README.md  boilerplate.py  pyproject.toml  qt.yaml  qtworkspace.code-workspace  requirements.txt  setup.py
qtwidgets/: MANIFEST.in  __init__.py  area_selector.py  config.py  draggable_list.py  images.py  qt.code-workspace  sliders.py  spinbox.py  test.py  textbox.py
qtwidgets/data/: __init__.py
qtwidgets/tests/: test_QImage.py  test_QImageViewer.py  test_config.py  test_draggablelist.py  test_selectarea.py  test_slider.py  test_spinbox.py  test_widgets.py
